--- a/ecommerce-backend copy/.env
+++ b/ecommerce-backend copy/.env
@@ -1,4 +1,4 @@
 PORT=5500
 MONGO_URI=mongodb+srv://shauryapundir:vifkes-8fybre-qoktId@cluster0.zt10svj.mongodb.net/ecommerce?retryWrites=true&w=majority&appName=Cluster0
-RAZORPAY_KEY_ID=rzp_test_*******
-RAZORPAY_KEY_SECRET=************
+RAZORPAY_KEY_ID=rzp_test_iy98CvMUyGO9OM
+RAZORPAY_KEY_SECRET=nOsfqHkZnsNatX3d4NFbmdoX
